testemonial alignment fixed

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     margin-bottom: 0;
 }
 
-.display-4 {
+.display-2 {
     text-shadow: 2px 2px #ff0000;
     color: white;
 
@@ -32,11 +32,45 @@
     color: white;
 }
 
+.img1 {
+    width: 300px;
+    height: 300px;
+    background-image: url('images/Vampire-woman-720x547.jpg');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 100%;
+
+}
+.img2 {
+    width: 300px;
+    height: 300px;
+    background-image: url('images/satisfied_customer.jpeg');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 100%;
+}
+.img3 {
+    width: 300px;
+    height: 300px;
+    background-image: url('images/we_cater.jpeg');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 100%;
+
+}
 .vamp-woman {
     height: 273.5px;
     width: 360px;
 }
 
+.vamp-woman-right {
+    height: 273.5px;
+    width: 488.392857px;
+    justify-content: end; 
+}
 .carousel {
     margin-top: 0;
 }
